--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "classnames": "^2.1.1",
     "immutable": "^3.7.2",
     "moment": "^2.10.6",
-    "moment-range": "^2.0.3"
+    "moment-range": "^2.0.3",
+    "react-addons-pure-render-mixin": "^0.14.0"
   },
   "devDependencies": {
     "babel": "^5.2.16",
